app/assets/stylesheets/elements/header.scss
#main {
  padding-top: $d_header_height + $d_header_margin_top;
}

#page_header {

  position:fixed;
  width:100%;
  background-color: white;
  z-index:20;

  padding-top: $d_header_margin_top;
  height: $d_header_height /* - 2*$d_gridheight */;

  text-align: center;

  @include visual_bg;

  li {
    color: $ca_menu_active;
  }

  #menu_language {
    li:not(:last-child)::after {
      content: "/";
      color: $ca_text_color;
    }
    abbr {
      border: none;
      text-decoration: none;
    }
  }

  // LAYOUT: ALL EXCEPT LOGO

  ul {
    margin-top: 7 * $d_gridheight - $base-line-height;
    @include baseline_adjust_base;
    display:inline;
  }
  
  // FIRST

  #logo {

    box-sizing: border-box;
    margin-left: $d_gutterwidth_abs;
    float: left;
    text-align: left;

    @include bp($b_8_and_up) { 
      padding-left: 0.5 * $d_gridwidth_abs;
      width: 2 * $d_gridwidth_abs + 1 * $d_gutterwidth_abs ;
    }

    img {
      height: 8 * $d_gridheight;
    }

    @include visual_bg
  }

  // SECOND

  #menu_dynamic {

    @include bp($b_12_and_up) {  
      box-sizing: border-box;
      margin-left: $d_gutterwidth_abs;
      align-self: flex-start;
    }

    @include bp($b_12_and_lower) {  
      text-align: center;
    }

    @include bp($b_12_and_up) { 
      li:nth-child(n+2) {
        margin-left: 1em;
        @include bp("(max-width: 900px)") {
          margin-left: 0.85em;
        }        
      }
      li {
        display: inline;
      }
    }

    @include visual_bg
  }

  // THIRD

  #menu_static {

    @include bp($b_12_and_up) {
      flex-grow: 1;
      text-align: right;
      margin-right: $d_gutterwidth_abs;

      li:nth-child(n+2) {
        margin-left: 1em;
        @include bp("(max-width: 900px)") {
          margin-left: 0.85em;
        }
      }
      li {
        display: inline;
      }      
    }

    @include bp($b_12_and_lower) {
      @include bp("(min-height: 521px)") {
        margin-top: 3*$lineheight;
        margin-bottom: 2*$lineheight;
      }
    }

    @include visual_bg
  }

  // FOURTH

  #menu_language {

    box-sizing: border-box;
    text-transform: uppercase;

    @include bp($b_12_and_up) { 
      text-align: right;
      margin-right: $d_gutterwidth_abs;
      padding-right: 0.5 * $d_gridwidth_abs;
      width: 2 * $d_gridwidth_abs + 1 * $d_gutterwidth_abs ;
    }    

    @include bp($b_12_and_lower) { 
      width: 100%;
    }

    li {
      display: inline;
    }      

    @include visual_bg
  }

  @include visual_bg;

  //////// not mobile

  .menu_container {
    @include bp($b_12_and_up) {  
      display: flex;
      align-items: stretch;
      justify-content: flex-end;
      @include visual_bg;
    }
    @include bp($b_20_and_up) {  
      font-size: 16px;
    }    
  }

  //////// mobile

  .menu_container {
    @include bp($b_12_and_lower) {  
      position: fixed;
      width: 100%;
      height: 100vh;
      top:0;
      background-color: $ca_mobile_menu_background;

      display:flex;
      justify-content: center;
      flex-direction: column;
      z-index: 20;

      font-size: 1.5rem;
      line-height: 3rem;

      @include bp("(max-height: 520px)") {
        font-size: 1rem;
        line-height: 2rem;
      }

      li a, li:after {
        color:white !important;
        font-weight: normal;
      }

      li {
        color: black;
        opacity: 1;
        transition: opacity 0.3s 0.1s;
      }

      ul, li {
        text-align: center;
      }

      transition: height 0.5s, opacity 0.3s 0.1s;
      overflow: hidden;

      body:not(.menu_active) & {
        height:0vh;
      }

      body:not(.menu_active) & li {
        opacity: 0;
      }      

    }
  }

  .section_title {
    @include bp($b_12_and_up) {
      display: none;
    }
    @include bp($b_12_and_lower) {
      display: inline-block;
      padding-top: 1 * $d_gridheight;
      transform: translateX(-50%);
      padding-top: 10px;
      margin-top: 4px;
      text-align: center;
      position: absolute;
      left: 50%;
      &, a { color: $c_bgmr_primary; }

      @include visual_bg;
    }
    @include bp($b_5_and_lower) {
      display: none;
    }            
  }

  .close_icon, .menu_button {
    cursor: pointer;
    fill: white;
    stroke: white;
    stroke-width: 4px;
    stroke-linecap: butt;
    position: absolute;
    top: 1px;
    right:0;
    width: 2.5rem;
    height: 2.5rem;
    margin: $d_lineheight $d_gutterwidth_abs;
    @include bp($b_12_and_up) { display: none; }
    @include bp($b_8_and_up) { 
      padding-right: 0.5 * $d_gridwidth_abs;
    }
  }

  .menu_button {
    stroke: $ca_menu_icon;
    fill: $ca_menu_icon;
    stroke-width: 3px;
  }


}

